Sun Mar 13 12:39:18 EST 2005

	Fix -mnew and -mold when there are multiple
	files on command line.

	Add optional file locking.

	Add joe() math command.  Executes JOE macro, and 
	returns success value as result.

	Added sys command: execute a shell command with
	I/O connected to terminal, not editor.  Return
	value of shell command is success value of command.

	rdonly flag is available as math variable.

	Added perforce macro.  Fixed some "if" bugs.

Sat Mar 12 00:31:23 EST 2005

	Update other *rc files.
	Fix some marking bugs in jpico.
	Allow colors to be specified in joerc file
	Improve perl again.
	^D in prompts brings up menu
	Fix ^X a in jmacs
	Fix ^X ^I in jmacs (neg arg is broken)

Fri Mar 11 2005  Joe Allen <jhallen@world.std.com>

	Help text points to doc files


Wed Mar  9 2005  Joe Allen <jhallen@world.std.com>

	^K W now prints a success message.

	More perl highlighter fixes.

Sat Mar  5 2005  Joe Allen <jhallen@world.std.com>

	Fix bug where ^KC to copy text into search
	prompt was not working (search was taking
	over selected block too early).

Fri Mar  4 2005  Joe Allen <jhallen@world.std.com>

	Add block evaluator and ? operator to math
	(now it can loop via. recursion :-)

	Add #if #else #endif matching.

	Get ^G working for VHDL (VHDL sucks).

	Disable ^K E and ^K ' in prompt windows.

	open ^] now autoindents (again).

	Fix jpico lock-up problem (lmargin option was
	not checking for invalid value of 0).

	Accept buffer overflow patch.

	-square is not a local option.

Thu Mar  3 2005  Joe Allen <jhallen@world.std.com>

	New help screen for math.
	Add statistics functions.

Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix pointer leak.
	Make option to enable mouse support
	Change .joe_state file to use \ for escape
	Improve math
	Ignore <a/> in Ctrl-G

Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix warnings from various syntax files (can't
	believe I didn't notice this...)

	Add -menu_jump option
